# ackroyd-riyait

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cell_fluxes.csv
cmake/: CMakeLists.txt  GlobalVariables.cmake  Policies.cmake
docs/: Doxyfile  doxygen-awesome.css
grid_convergence/: cell_fluxes_test_1.0.csv  cell_fluxes_test_16.0.csv  cell_fluxes_test_2.0.csv  cell_fluxes_test_4.0.csv  cell_fluxes_test_8.0.csv  matplotlib.rc
include/: cell.h  gauss-legendre-chebyshev.h  gauss_legendre.h  gauss_legendre_chebyshev.h  material.h  point.h  rectangular_region.h  simulation.h  test_class.h
other_problems/: dogleg.cc  duct.cc
python-fem/: conda_environment.yml  square-source-coarse.msh
python-fem/fem/: even-parity-tris.py  linear_triangles.py
scripts/: cell_fluxes.csv  cells_test.csv  compute_error.py  gauss_legendre_build.py  gl_to_cpp.txt  l2_norm.csv  plot_cells.py  plot_error.py  plot_flux.py
slides/: Makefile  README.md  acros.tex  angular_discretization.tex  appendix.tex  ar_problems.tex  arfc-pres.tex  beamercolorthemeIllinoisWhite.sty  beamerthemeIllinois.sty  bibliography.bib  bte_simplification.tex  cat_appearance.tex  conclusion.tex  diamond_differencing.tex  extra-slides.tex  fv.tex  grid_convergence.tex  nte.tex  presentation.tex  problem_disc.tex  results.tex  s1_nte.tex  s2_ar_problem.tex  s2_discrete.tex  s3_sn.tex  s4_code_struct.tex  s5_ar_problem.tex  s5_conclusion.tex  s6_results.tex  s7_conclusion.tex  source_iterations.tex  tab.tex
src/: CMakeLists.txt  cell.cc  gauss-legendre-chebyshev.cc  gauss_legendre.cc  gauss_legendre_chebyshev.cc  main.cc  material.cc  point.cc  rectangular_region.cc  simulation.cc  test_class.cc
tests/: CMakeLists.txt  gauss_legendre_chebyshev_tests.cc  gauss_legendre_tests.cc  simulation_tests.cc
(+23 files in other folders)
